--- a/Split_It/UserControls/ExpenseUserControl.xaml
+++ b/Split_It/UserControls/ExpenseUserControl.xaml
@@ -573,11 +573,9 @@
 
             <Border Grid.Row="0" BorderThickness="0,0,0,2" BorderBrush="{StaticResource splitwiseGreyBG}">
                 <StackPanel Orientation="Vertical" Margin="15,10">
-                    <TextBlock Foreground="Black" FontSize="{StaticResource nameSize}">
-						<Run Text="With"/>
-						<Run Text="you" FontWeight="Bold"/>
-						<Run Text="and:"/>
-                    </TextBlock>
+                    <TextBlock Foreground="Black" 
+                               Text="Expense Participants:"
+                               FontSize="{StaticResource nameSize}"/>
 
                     <telerikInput:RadListPicker
 						Header="Friends"
@@ -631,6 +629,7 @@
                         <toolkit:PhoneTextBox Grid.Row="0" 
 								x:Name="tbDescription" 
 								AcceptsReturn="False" 
+                                TextWrapping="Wrap"
 								InputScope="Text" 
 								Hint="enter description"
 								BorderThickness="0" Margin="4,0,0,0" />
@@ -690,6 +689,7 @@
                                    Foreground="Black" 
                                    FontSize="{StaticResource nameSize}"
                                    Text="Paid by:"/>
+                        
                         <telerikInput:RadListPicker
                             Grid.Column="1"
 						    Header="Paid By"
@@ -709,6 +709,38 @@
                             </telerikInput:RadListPicker.PopupItemTemplate>
                         </telerikInput:RadListPicker>
                     </Grid>
+
+                    <phone:LongListSelector Grid.Row="1" 
+                                            Margin="15,10,15,0"
+                                            Name="llsMultiplePaid" 
+                                            Visibility="Collapsed">
+                        <phone:LongListSelector.ItemTemplate>
+                            <DataTemplate>
+                                <Grid Margin="0,10">
+                                    <Grid.ColumnDefinitions>
+                                        <ColumnDefinition Width="*"/>
+                                        <ColumnDefinition Width="Auto"/>
+                                    </Grid.ColumnDefinitions>
+                                    <TextBlock Grid.Column="0" 
+                                                   Text="{Binding 'user.name'}" 
+                                                   FontSize="{StaticResource nameSize}" 
+                                                   VerticalAlignment="Center"
+                                                   HorizontalAlignment="Left" 
+                                                   Foreground="Black" 
+                                                   TextWrapping="Wrap"/>
+
+                                    <TextBox Grid.Column="1" 
+                                                 Text="{Binding paid_share, Mode=TwoWay}" 
+                                                 FontSize="{StaticResource expenseDetailAmount}" 
+                                                 HorizontalAlignment="Right" 
+                                                 Foreground="Black" 
+                                                 Background="{StaticResource splitwiseGreyBG}" 
+                                                 Width="100" KeyDown="tbUnequal_KeyDown"
+                                                 InputScope="Number"/>
+                                </Grid>
+                            </DataTemplate>
+                        </phone:LongListSelector.ItemTemplate>
+                    </phone:LongListSelector>
                 </Grid>
             </Border>
 
@@ -751,7 +783,8 @@
                         </telerikInput:RadListPicker>
                     </Grid>
 
-                    <StackPanel Margin="15,10,15,0" Orientation="Vertical" x:Name="spUnequally" Visibility="Collapsed">
+                    <StackPanel Margin="15,10,15,0" Grid.Row="1" Orientation="Vertical" x:Name="spUnequally" Visibility="Collapsed">
+                        
                         <StackPanel  Orientation="Horizontal">
                             <RadioButton x:Name="rbExactAmounts" Content="amount" GroupName="Group1" 
                    Checked="RadioButton_Checked" IsChecked="True"/>
