--- a/Split_It/UserControls/ExpenseUserControl.xaml
+++ b/Split_It/UserControls/ExpenseUserControl.xaml
@@ -693,7 +693,7 @@
                 <Grid Margin="15">
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="Auto"/>
-                        <ColumnDefinition Width="1.25*"/>
+                        <ColumnDefinition Width="Auto"/>
                         <ColumnDefinition Width="Auto"/>
                         <ColumnDefinition Width="*"/>
                     </Grid.ColumnDefinitions>
@@ -703,32 +703,31 @@
                                FontSize="{StaticResource nameSize}"
                                Text="Paid by"/>
 
-                    <telerikInput:RadListPicker
-                        Grid.Column="1"
-                        Margin="12,0"
-						BorderBrush="{StaticResource splitwiseGreyBG}"
-						Foreground="Black"
-						x:Name="paidByListPicker"
-						ActionButtonVisibility="Collapsed"
-						SelectionMode="Single"
-                        HorizontalContentAlignment="Center"
-                        Style="{StaticResource RadListPickerStyle1}" 
-                        VerticalContentAlignment="Top" />
+                    <Border BorderThickness="2" 
+                            Margin="10,0"
+                            Grid.Column="1"
+                            BorderBrush="{StaticResource splitwiseGreyBG}">
+                        
+                        <TextBlock Foreground="Black"
+                                   Margin="10,0"
+                                   FontSize="{StaticResource nameSize}"
+                                   x:Name="tbPaidBy"
+                                   Text="you"/>
+                    </Border>
 
                     <TextBlock Foreground="Black"
                                Grid.Column="2"
                                FontSize="{StaticResource nameSize}"
-                               Text="and"/>
+                               Text="and split"/>
 
                     <telerikInput:RadListPicker
                         Grid.Column="3"
-                        Margin="12,0"
+                        Margin="12,-6"
 						BorderBrush="{StaticResource splitwiseGreyBG}"
 						Foreground="Black"
 						x:Name="SplitTypeListPicker"
 						ActionButtonVisibility="Collapsed"
 						SelectionMode="Single"
-                        HorizontalContentAlignment="Center"
                         Style="{StaticResource RadListPickerStyle1}" />
                 </Grid>
             </Border>
