dim background when popup is shown

--- a/Split_It/Add_Expense_Pages/AddExpense.xaml
+++ b/Split_It/Add_Expense_Pages/AddExpense.xaml
@@ -36,6 +36,12 @@
                                             Grid.Row="0" 
                                             Grid.RowSpan="3"
                                             AnimationStyle="AnimationStyle9"/>
+
+        <StackPanel Background="#CC000000"
+                    Visibility="Collapsed"
+                    x:Name="DimContainer"
+                    Grid.Row="0"
+                    Grid.RowSpan="3"/>
     </Grid>
 
 </phone:PhoneApplicationPage>
