--- a/Split_It/UserControls/ExpenseUserControl.xaml
+++ b/Split_It/UserControls/ExpenseUserControl.xaml
@@ -693,22 +693,26 @@
                     BorderBrush="{StaticResource splitwiseGreyBG}">
 
                     <Grid Margin="15">
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="Auto"/>
+                        <RowDefinition Height="Auto"/>
+                    </Grid.RowDefinitions>
+
+                    <Grid Grid.Row="0">
                         <Grid.ColumnDefinitions>
-                            <ColumnDefinition Width="Auto"/>
-                            <ColumnDefinition Width="Auto"/>
                             <ColumnDefinition Width="Auto"/>
                             <ColumnDefinition Width="*"/>
                         </Grid.ColumnDefinitions>
 
                         <TextBlock Foreground="Black"
-                               Grid.Column="0"
-                               FontSize="{StaticResource nameSize}"
-                               Text="Paid by"/>
+                                   Grid.Column="0"
+                                   FontSize="{StaticResource nameSize}"
+                                   Text="Paid by"/>
 
                         <Border BorderThickness="2" 
-                            Margin="10,0"
-                            Grid.Column="1"
-                            BorderBrush="{StaticResource splitwiseGreyBG}">
+                                Margin="10,0"
+                                Grid.Column="1"
+                                BorderBrush="{StaticResource splitwiseGreyBG}">
 
                             <TextBlock Foreground="Black"
                                        Tap="tbPaidBy_Tap"
@@ -719,22 +723,30 @@
                                        Text="You"
                                    />
                         </Border>
+                    </Grid>
 
+                    <Grid Grid.Row="1" Margin="0,10,0,0">
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="Auto"/>
+                            <ColumnDefinition Width="*"/>
+                        </Grid.ColumnDefinitions>
+                        
                         <TextBlock Foreground="Black"
-                               Grid.Column="2"
-                               FontSize="{StaticResource nameSize}"
-                               Text="and split"/>
+                                   Grid.Column="0"
+                                   FontSize="{StaticResource nameSize}"
+                                   Text="and split"/>
 
                         <telerikInput:RadListPicker
-                        Grid.Column="3"
-                        Margin="12,-10"
-						BorderBrush="{StaticResource splitwiseGreyBG}"
-						Foreground="Black"
-						x:Name="SplitTypeListPicker"
-						ActionButtonVisibility="Collapsed"
-						SelectionMode="Single"
-                        Style="{StaticResource RadListPickerStyle1}" />
+                            Margin="12,0,0,0"
+                            Grid.Column="1"
+						    BorderBrush="{StaticResource splitwiseGreyBG}"
+						    Foreground="Black"
+						    x:Name="SplitTypeListPicker"
+						    ActionButtonVisibility="Collapsed"
+						    SelectionMode="Single"
+                            Style="{StaticResource RadListPickerStyle1}" />
                     </Grid>
+                </Grid>
                 </Border>
 
                 <telerikInput:RadDatePicker x:Name="expenseDate" 
