--- a/Split_It/ExpenseSearch.xaml
+++ b/Split_It/ExpenseSearch.xaml
@@ -66,10 +66,20 @@
             </telerikPrimitives:RadTextBox>
 
             <telerikPrimitives:RadDataBoundListBox Name="llsExpenses"
-                                    Grid.Row="1" 
-                                    Margin="0,5,0,0"
-                                    ItemTemplate="{StaticResource expensesTemplate}"
-                                    SelectionChanged="llsExpenses_Tap"/>
+                                                   EmptyContentDisplayMode="Always"
+                                                   Grid.Row="1" 
+                                                   Margin="0,5,0,0"
+                                                   ItemTemplate="{StaticResource expensesTemplate}"
+                                                   SelectionChanged="llsExpenses_Tap">
+                <telerikPrimitives:RadDataBoundListBox.EmptyContentTemplate>
+                    <DataTemplate>
+                        <TextBlock Foreground="Red"
+                                   Text="No result found"
+                                   HorizontalAlignment="Center"
+                                   FontSize="{StaticResource descriptionSize}"/>
+                    </DataTemplate>
+                </telerikPrimitives:RadDataBoundListBox.EmptyContentTemplate>
+            </telerikPrimitives:RadDataBoundListBox>
         </Grid>
 
         <telerikPrimitives:RadBusyIndicator Background="#CC000000"
